refactor: cleaner method on isabelle service